--- a/Testing/Qactive.Tests-Net45/packages.config
+++ b/Testing/Qactive.Tests-Net45/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Reactive.Testing" version="3.0.0" targetFramework="net452" />
-  <package id="System.Interactive" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Providers" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net452" />
+  <package id="Microsoft.Reactive.Testing" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.Interactive" version="3.1.1" targetFramework="net452" />
+  <package id="System.Reactive" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.Reactive.Core" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.Reactive.Interfaces" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.Reactive.Linq" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.Reactive.PlatformServices" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.Reactive.Providers" version="4.0.0-preview00001" targetFramework="net452" />
+  <package id="System.Reactive.Windows.Threading" version="4.0.0-preview00001" targetFramework="net452" />
 </packages>
